--- a/style.css
+++ b/style.css
@@ -57,3 +57,7 @@ th              {
                 text-align: left;
                 width: 250px;
                 }
+h5              {
+                margin: 0px;
+                }
+}
