--- a/style.css
+++ b/style.css
@@ -90,5 +90,5 @@ footer          {
 .credits        {
                 
                 margin-bottom: 0;
-                margin-left: 3rem
+                margin-left: 3rem;
 }
